# hasadna-k8s

./: .gitignore  .tool-versions  .travis_deploy.sh  AGENTS.md  AGENTS.sh  Dockerfile  LICENSE  Odata - debug production pipelines.ipynb  Odata minikube environment.ipynb  Odata production environment.ipynb  README.md  anyway-minikube-one-command.sh  apps_travis_script.sh  charts-config.yaml  connect.sh  functions.sh  helm_lint_all.sh  helm_lint_external_chart.sh  helm_upgrade_all.sh  helm_upgrade_external_chart.sh  helm_upgrade_repo_chart.sh  jupyter.Dockerfile  kubectl.sh  kubectl_hot_reload.sh  kubectl_patch_charts.py  minikube_docker_build.sh  minikube_init.sh  ops.Dockerfile  pre_deploy_update_charts_config_values.py  pyproject.toml  read_env_yaml.sh  read_yaml.py  run_docker_ops.sh  switch_environment.sh  update_yaml.py  values.auto-updated.yaml  values.yaml
.codex/: setup.sh
.github/: ci.yaml
.github/workflows/: ci.yaml  ci.yml  ci_argocd_docker.yaml  haadna_mutating_webhook_tests.yaml  hasadna_mutating_webhook_tests.yaml
apps/anyway/: README.md  values-anyway-auto-updated.yaml  (+3 more)
docs/: argocd.md  backups.md  external-server.md  github_pusher.md  host_node_ports.md  kamatera.md  logging.md  logs_export.md  monitoring.md  nodes.md  problems_and_solutions.md  rancher.md  ssh_access.md  storage.md
haadna-mutating-webhook/: go.mod  main.go  main_test.go
hasadna-mutating-webhook/: .gitignore  README.md  go.mod  go.sum  main.go  main_test.go
hasadna_k8s/: cli.py  version.py
tests/: test_cleanup_old_logs.py  test_github_pusher.py  test_workflows.py
(+870 files in other folders)
